# homeflix

./: .gitignore  CNAME  README.md  index.html
media-identifier/: .gitignore  Cargo.toml
media-identifier/examples/: debug.rs
media-identifier/src/: lib.rs  main.rs  markers.rs  parser.rs  patterns.rs  tokenizer.rs  types.rs
media-identifier/tests/: integration_tests.rs
server/: .gitignore  Cargo.toml  Dockerfile  README.md
server/benches/: api_bench.rs  scanner_bench.rs
server/migrations/: phase8_indexes.sql
server/presets/: mcu-timeline.yaml  shrek-timeline.yaml  star-trek-timeline.yaml  stargate-timeline.yaml
server/src/: lib.rs  main.rs
server/src/application/: mod.rs
server/src/application/handlers/: background_task_handler.rs  cache_invalidation_handler.rs  collection_detected_handler.rs  collection_management_handler.rs  media_identified_handler.rs  metrics_handler.rs  mod.rs  notification_handler.rs  progress_tracking_handler.rs  scan_completed_handler.rs  streaming_handler.rs  subtitle_generation_handler.rs  thumbnail_generation_handler.rs
server/src/application/services/: collection_manager.rs  metadata_enricher.rs  mod.rs  scanner_orchestrator.rs
server/src/application/use_cases/: batch_generate_subtitles.rs  generate_subtitle.rs  get_recently_added.rs  identify_media.rs  manage_series.rs  mod.rs  scan_library.rs  stream_media.rs
server/src/domain/: mod.rs
server/src/domain/entities/: collection.rs  episode.rs  media.rs  mod.rs  season.rs  series.rs
server/src/domain/events/: background_tasks.rs  collection_detected.rs  collection_management.rs  media_identified.rs  media_verified.rs  mod.rs  progress_tracking.rs  scan_completed.rs  scan_failed.rs  streaming.rs  subtitle_generation.rs  thumbnail_generation.rs
server/src/domain/presets/: franchises.rs  mod.rs
server/src/domain/services/: mod.rs  (+4 more)
server/src/infrastructure/: mod.rs
server/src/interfaces/: mod.rs
server/src/shared/: error.rs  mod.rs
server/tests/: scan_test.rs
server/tests/e2e/: mod.rs  scan_workflow.rs
server/tests/integration/: mod.rs
server/tests/scalability/: batch_tmdb_test.rs  connection_pool_test.rs  parallel_processing_test.rs
server/tests/unit/: mod.rs
(+159 files in other folders)
