[package]
name = "homeflixd"
version = "0.1.0"
edition = "2021"
description = "HomeFlixD - Self-hosted media server backend"

[dependencies]
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
anyhow = "1.0"
walkdir = "2"
quick-xml = { version = "0.36", features = ["serialize"] }
regex = "1"
mime_guess = "2"
futures = "0.3"
bytes = "1"
http-body-util = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
strsim = "0.11.1"
uuid = { version = "1.19.0", features = ["v4", "fast-rng"] }
urlencoding = "2.1"
toml = "0.8"
async-trait = "0.1"
thiserror = "1.0"
num_cpus = "1.16"
once_cell = "1.19"
sha2 = "0.10"
hex = "0.4"

# Media filename parsing
media-identifier = { path = "../media-identifier" }

# Pure Rust HLS remuxing (no FFmpeg dependency)
matroska-demuxer = "0.7"
h264-reader = "0.8"

[dev-dependencies]
mockall = "0.12"
criterion = "0.5"
tempfile = "3"
wiremock = "0.6"
assert_matches = "1.5"
proptest = "1.4"
tokio-test = "0.4"
walkdir = "2"

#[[bench]]
#name = "scanner_bench"
#harness = false

#[[bench]]
#name = "api_bench"
#harness = false
